<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_outline_save_24"
        android:title="@string/save_menu_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_menu_item"
        app:showAsAction="never" />

</menu>